Revision history for Dist-Zilla-Role-ModuleIncluder

{{$NEXT}}
          - added configs to metadata under x_Dist_Zilla

0.006     2016-04-27 00:59:01+02:00 Europe/Amsterdam
          - Fix a syntax error on perl < 5.20

0.005     2016-04-25 12:14:13+01:00 Europe/London
          - Add an include_dependencies option
          - Handle encodings correctly
          - Convert to File::Slurper
          - include_modules() now returns the list of file objects that were
          added.

0.004     2013-11-12 18:01:09 Europe/Amsterdam
          Switch from File::Slurp to File::Slurp::Tiny

0.003     2013-08-17 13:51:40 Europe/Amsterdam
          Fix precedence issue in return … and …
          Don't rescan on increased module dependency

0.002     2012-03-31 17:42:47 Europe/Amsterdam
          Added corpus/ to no_index

0.001     2012-03-31 17:07:36 Europe/Amsterdam
          Initial release